--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
 <body>
 <h1>Abes engeneering college</h1>
 <h2>Ghaziabad,up</h2>
+  <img src="index.img.jpeg"/>
   <h3> BRANCHES </h3>
   <h4> cs it ec en </h4>
   <h5> it c </h5>
   <h6>     </h6>
 <p> sdjrie mjdfytiers hgdkf7ehwrc
   eyerigteyio</p>
+  
 </body>
 </html>
